# internal/module/account/account.router.go
@@ -19,5 +19,6 @@ func NewAccountRouter(r *gin.Engine, group *gin.RouterGroup, service IAccountSer
 		auth.PUT("/fullname/:id", ac.UpdateName)
 		auth.POST("/location", ac.AddYourLocation)
 		auth.GET("/searching", ac.Searching)
+		auth.PUT("", ac.AddEmail)
 	}
 }
