# internal/module/reset_password/reset_password.router.go
@@ -8,8 +8,9 @@ import (
 
 func NewResetPasswordRouter(r *gin.Engine, group *gin.RouterGroup, service IResetPasswordService, config util.Config, token token.Maker) {
 	rc := NewResetPasswordController(service, config, token)
-	reset := r.Group(group.BasePath() + "/reset-password")
+	reset := r.Group(group.BasePath() + "/forgot-password")
 	{
-		reset.POST("", rc.ResetPasswordRequest)
+		reset.POST("/request", rc.ForgotPassword)
+		reset.POST("/change", rc.ChangePassword)
 	}
 }
